App/Consumers: fix text overflow for list items in settings mode context

--- a/assets/app/src/styles/consumers.scss
+++ b/assets/app/src/styles/consumers.scss
@@ -17,6 +17,7 @@
 			flex-direction: row;
 			align-items: center;
 			grid-gap: 12px;
+			min-width: 0; // Support text-overflow
 			padding-left: 49px;
 
 			.avatar-image {
